# copier_template

./: .gitignore  copier.yml  extensions.py  main.py  main.py.jinja  makefile  pyproject.toml  pyproject.toml.jinja
src/: {{project_name}}.py.jinja
